FIx graph axis getting cut off

--- a/getdotastats.css
+++ b/getdotastats.css
@@ -237,6 +237,10 @@ table td, table th {
     height: 300px;
 }
 
+.d2mods-graph-overflow{
+    overflow-x: scroll;
+}
+
 #breakdown_heroes_picked {
     height: 400px !important;
 }
